burger bar media query added to ensure responsiveness on Iphone 5

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -189,7 +189,7 @@ a:hover {
 
 
 #dietinput {
-    text-indent: 45%;
+    text-indent: 40%;
 }
 
 /*--------PANTRY ESSENTIALS----------*/
@@ -274,26 +274,38 @@ a:hover {
   }
 }
 
-@media only screen and (min-width: 600px) {
-  .pantry-item{
+@media only screen and (max-width: 600px) {
+  .pantry-item {
    backdrop-filter: blur(6px);
   }
 }
 
-@media only screen and (min-width: 1024px) {
+@media only screen and (max-width: 600px) {
+  .pantry-ess {
+   backdrop-filter: blur(6px);
+  }
+}
+
+@media only screen and (max-width: 1024px) {
   .dot {
     display: none;
   }
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
   .links{
     word-spacing: 10px;
   }
 }
 
-@media only screen and (min-width: 600px) {
+@media only screen and (max-width: 600px) {
   .socials{
     word-spacing: 5px;
+  }
+}
+
+@media only screen and (min-width: 320px) {
+  .navbar-brand{
+    font-size: 27px;
   }
 }
